--- a/Openstreet Rigon.html
+++ b/Openstreet Rigon.html
@@ -11,7 +11,8 @@
 
     <script src="https://code.jquery.com/jquery-2.2.4.min.js"></script>
     <script src="https://unpkg.com/leaflet@1.7.1/dist/leaflet.js"></script>
-
+    <script src="https://cdn.jsdelivr.net/npm/leaflet.locatecontrol/dist/L.Control.Locate.min.js"></script>
+    
     <style>
         .searchbox {
             position: fixed;
@@ -83,7 +84,7 @@
         map.setView([38, 120.5], 7);
 
     </script>
-
+    <script src="Openstreet Rigon/openstreetrigon.js"></script>
     <script>
 
         function run() {
